--- a/static/index.html
+++ b/static/index.html
@@ -65,7 +65,7 @@
 <body>
 
 <div class="upload-container">
-  <h2>Загрузите ваши данные (в формате sqlite)</h2>
+  <h2>Загрузите ваши данные (в формате *.json)</h2>
   <form action='/upload' enctype='multipart/form-data' method='post'>
     <div class="file-input-container">
         <label class="file-input-label" id="file-input-label">
